name:                sl-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cirquit/sl-interpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Isenko
maintainer:          alex.isenko@protonmail.com
copyright:           Apache License 2.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , BNF
                     , ParserRecords
                     , ParserLens
  build-depends:       base         >= 4.7     && < 5
                     , megaparsec   >= 5.2.0   && < 6
                     , containers   >= 0.5.7.1 && < 6
                     , mtl          >= 2.2.0   && < 3
                     , transformers >= 0.5.0.0 && < 6
                     , lens         >= 4.0.0   && < 5
  default-language:    Haskell2010

executable sl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sl-interpreter
                     , megaparsec  >=5.2.0 && < 6
  default-language:    Haskell2010

test-suite sl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sl-interpreter
                     , megaparsec  >=5.2.0 && < 6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cirquit/sl-interpreter
